hv_netvsc: Cleanup the test for freeing skb when we use sendbuf mechanism (fate#317533).

--- a/series.conf
+++ b/series.conf
@@ -21857,6 +21857,7 @@
 	patches.suse/msft-hv-0781-Drivers-hv-vmbus-Fix-a-siganlling-host-signalling-is.patch
 	patches.suse/msft-hv-0782-Drivers-hv-vmbus-Don-t-wait-after-requesting-offers.patch
 	patches.suse/msft-hv-0784-hv_netvsc-remove-vmbus_are_subchannels_present-in-rn.patch
+	patches.suse/msft-hv-0785-hv_netvsc-Cleanup-the-test-for-freeing-skb-when-we-u.patch
 
 	patches.suse/msft-hv-0801-scsi-storvsc-Increase-the-ring-buffer-size.patch
 	patches.suse/msft-hv-0802-scsi-storvsc-Size-the-queue-depth-based-on-the-ringb.patch
