Drivers: hv: vmbus: Get rid of some unnecessary messages (fate#317533).

--- a/series.conf
+++ b/series.conf
@@ -21836,6 +21836,7 @@
 	patches.suse/msft-hv-0759-Drivers-hv-vmbus-Handle-both-rescind-and-offer-messa.patch
 	patches.suse/msft-hv-0760-Drivers-hv-vmbus-Remove-the-channel-from-the-channel.patch
 	patches.suse/msft-hv-0761-Drivers-hv-util-On-device-remove-close-the-channel-a.patch
+	patches.suse/msft-hv-0762-Drivers-hv-vmbus-Get-rid-of-some-unnecessary-message.patch
 
 	patches.suse/msft-hv-0801-scsi-storvsc-Increase-the-ring-buffer-size.patch
 	patches.suse/msft-hv-0802-scsi-storvsc-Size-the-queue-depth-based-on-the-ringb.patch
