--- a/series.conf
+++ b/series.conf
@@ -21819,6 +21819,7 @@
 	patches.suse/msft-hv-0742-hyperv-Implement-netvsc_get_channels-ethool-op.patch
 	patches.suse/msft-hv-0743-Drivers-hv-vmbus-prevent-cpu-offlining-on-newer-hype.patch
 	patches.suse/msft-hv-0744-Drivers-hv-vmbus-rename-channel-work-queues.patch
+	patches.suse/msft-hv-0745-Drivers-hv-vmbus-avoid-double-kfree-for-device_obj.patch
 
 	patches.suse/msft-hv-0801-scsi-storvsc-Increase-the-ring-buffer-size.patch
 	patches.suse/msft-hv-0802-scsi-storvsc-Size-the-queue-depth-based-on-the-ringb.patch
