--- a/series.conf
+++ b/series.conf
@@ -21848,6 +21848,7 @@
 	patches.suse/msft-hv-0771-hyperv-hyperv_fb-match-wait_for_completion_timeout-r.patch
 	patches.suse/msft-hv-0772-Drivers-hv-vmbus-Perform-device-register-in-the-per-.patch
 	patches.suse/msft-hv-0773-Drivers-hv-hv_balloon-keep-locks-balanced-on-add_mem.patch
+	patches.suse/msft-hv-0774-Drivers-hv-hv_balloon-don-t-lose-memory-when-onlinin.patch
 
 	patches.suse/msft-hv-0801-scsi-storvsc-Increase-the-ring-buffer-size.patch
 	patches.suse/msft-hv-0802-scsi-storvsc-Size-the-queue-depth-based-on-the-ringb.patch
