Drivers: hv: vmbus: Add support for the NetworkDirect GUID (fate#317533).

--- a/series.conf
+++ b/series.conf
@@ -21830,6 +21830,7 @@
 	patches.suse/msft-hv-0753-hv-channel_mgmt-match-var-type-to-return-type-of-wai.patch
 	patches.suse/msft-hv-0754-hv-hv_balloon-match-var-type-to-return-type-of-wait_.patch
 	patches.suse/msft-hv-0755-Drivers-hv-vmbus-Fix-a-bug-in-the-error-path-in-vmbu.patch
+	patches.suse/msft-hv-0756-Drivers-hv-vmbus-Add-support-for-the-NetworkDirect-G.patch
 
 	patches.suse/msft-hv-0801-scsi-storvsc-Increase-the-ring-buffer-size.patch
 	patches.suse/msft-hv-0802-scsi-storvsc-Size-the-queue-depth-based-on-the-ringb.patch
