Drivers: hv: hv_balloon: survive ballooning request with num_pages=0 (fate#317533).

--- a/series.conf
+++ b/series.conf
@@ -21863,6 +21863,7 @@
 	patches.suse/msft-hv-0789-hv-remove-the-per-channel-workqueue.patch
 	patches.suse/msft-hv-0790-Drivers-hv-hv_balloon-do-not-online-pages-in-offline.patch
 	patches.suse/msft-hv-0791-Drivers-hv-hv_balloon-eliminate-jumps-in-piecewiese-.patch
+	patches.suse/msft-hv-0792-Drivers-hv-hv_balloon-survive-ballooning-request-wit.patch
 
 	patches.suse/msft-hv-0801-scsi-storvsc-Increase-the-ring-buffer-size.patch
 	patches.suse/msft-hv-0802-scsi-storvsc-Size-the-queue-depth-based-on-the-ringb.patch
