Drivers: hv: vmbus: Suport an API to send pagebuffers with additional control (fate#317533).

--- a/series.conf
+++ b/series.conf
@@ -21842,6 +21842,7 @@
 	patches.suse/msft-hv-0765-Drivers-hv-hv_balloon-refuse-to-balloon-below-the-fl.patch
 	patches.suse/msft-hv-0766-Drivers-hv-vmbus-Add-support-for-VMBus-panic-notifie.patch
 	patches.suse/msft-hv-0767-Drivers-hv-vmbus-Use-a-round-robin-algorithm-for-pic.patch
+	patches.suse/msft-hv-0768-Drivers-hv-vmbus-Suport-an-API-to-send-pagebuffers-w.patch
 
 	patches.suse/msft-hv-0801-scsi-storvsc-Increase-the-ring-buffer-size.patch
 	patches.suse/msft-hv-0802-scsi-storvsc-Size-the-queue-depth-based-on-the-ringb.patch
