hv: no rmmod for hv_vmbus and hv_utils.

--- a/series.conf
+++ b/series.conf
@@ -21887,6 +21887,7 @@
 	patches.suse/suse-hv-bind-hv_blkkvsc-to-hv_storvsc.patch
 	patches.suse/suse-hv-bind-hv_mouse-to-hid-hyperv.patch
 	patches.suse/suse-hv-HV_DRV_VERSION.patch
+	patches.suse/suse-hv-module-unload.patch
 
 
 	########################################################
