--- a/series.conf
+++ b/series.conf
@@ -7826,6 +7826,7 @@
 	patches.drivers/nvme-0256-Register-management-handle-under-nvme-class.patch
 	patches.drivers/nvme-0257-Asynchronous-controller-probe.patch
 	patches.drivers/nvme-0258-Fix-potential-corruption-during-shutdown.patch
+	patches.drivers/nvme-0259-Fix-potential-corruption-on-sync-commands.patch
 
 	patches.drivers/mtip32xx-0001-Add-driver-for-Micron-RealSSD-pcie-flash-cards.patch
 	patches.drivers/mtip32xx-0002-fix-warnings-errors-on-32-bit-compiles.patch
