NVMe: Update namespace and controller identify structures to the 1.1a spec (bnc#926056).

--- a/series.conf
+++ b/series.conf
@@ -7820,6 +7820,7 @@
 	patches.drivers/nvme-0250-Return-0-from-make-request-on-ended-bio.patch
 	patches.drivers/nvme-0251-Add-tracepoints.patch
 	patches.drivers/nvme-0252-Flush-with-data-support.patch
+	patches.drivers/nvme-0253-Update-namespace-and-controller-identify-struct.patch
 
 	patches.drivers/mtip32xx-0001-Add-driver-for-Micron-RealSSD-pcie-flash-cards.patch
 	patches.drivers/mtip32xx-0002-fix-warnings-errors-on-32-bit-compiles.patch
