--- a/series.conf
+++ b/series.conf
@@ -7829,6 +7829,7 @@
 	patches.drivers/nvme-0259-Fix-potential-corruption-on-sync-commands.patch
 	patches.drivers/nvme-0260-Fix-PRP-list-calculation-for-non-4k-system-page.patch
 	patches.drivers/nvme-0261-Initialize-device-list-head-before-starting.patch
+	patches.drivers/nvme-0262-Add-translation-for-block-limits.patch
 
 	patches.drivers/mtip32xx-0001-Add-driver-for-Micron-RealSSD-pcie-flash-cards.patch
 	patches.drivers/mtip32xx-0002-fix-warnings-errors-on-32-bit-compiles.patch
