NVMe: Asynchronous controller probe (bnc#926056).

--- a/series.conf
+++ b/series.conf
@@ -7824,6 +7824,7 @@
 	patches.drivers/nvme-0254-Update-data-structures-for-NVMe-1.2.patch
 	patches.drivers/nvme-0255-Update-SCSI-Inquiry-VPD-83h-translation.patch
 	patches.drivers/nvme-0256-Register-management-handle-under-nvme-class.patch
+	patches.drivers/nvme-0257-Asynchronous-controller-probe.patch
 
 	patches.drivers/mtip32xx-0001-Add-driver-for-Micron-RealSSD-pcie-flash-cards.patch
 	patches.drivers/mtip32xx-0002-fix-warnings-errors-on-32-bit-compiles.patch
