--- a/series.conf
+++ b/series.conf
@@ -7821,6 +7821,7 @@
 	patches.drivers/nvme-0251-Add-tracepoints.patch
 	patches.drivers/nvme-0252-Flush-with-data-support.patch
 	patches.drivers/nvme-0253-Update-namespace-and-controller-identify-struct.patch
+	patches.drivers/nvme-0254-Update-data-structures-for-NVMe-1.2.patch
 
 	patches.drivers/mtip32xx-0001-Add-driver-for-Micron-RealSSD-pcie-flash-cards.patch
 	patches.drivers/mtip32xx-0002-fix-warnings-errors-on-32-bit-compiles.patch
