nvme: Fix PRP list calculation for non-4k system page size (bnc#926056).

--- a/series.conf
+++ b/series.conf
@@ -7827,6 +7827,7 @@
 	patches.drivers/nvme-0257-Asynchronous-controller-probe.patch
 	patches.drivers/nvme-0258-Fix-potential-corruption-during-shutdown.patch
 	patches.drivers/nvme-0259-Fix-potential-corruption-on-sync-commands.patch
+	patches.drivers/nvme-0260-Fix-PRP-list-calculation-for-non-4k-system-page.patch
 
 	patches.drivers/mtip32xx-0001-Add-driver-for-Micron-RealSSD-pcie-flash-cards.patch
 	patches.drivers/mtip32xx-0002-fix-warnings-errors-on-32-bit-compiles.patch
