xfs: prevent deadlock trying to cover an active log (bsc#917093).

--- a/series.conf
+++ b/series.conf
@@ -3901,6 +3901,8 @@
 	patches.fixes/0005-xfs-factor-extent-map-manipulations-out-of-xfs_bmapi.patch
 	patches.fixes/0006-xfs-introduce-xfs_bmapi_read.patch
 
+	patches.fixes/xfs-prevent-deadlock-trying-to-cover-an-active-log.patch
+
 	########################################################
 	# ceph backport from 3.5-rc1
 	########################################################
