net/tg3: Release IRQs on permanent error (bsc#90458 FATE#317507 bsc#925107).

--- a/series.conf
+++ b/series.conf
@@ -14752,6 +14752,8 @@
 	patches.drivers/tg3-0107-tg3-prevent-ifup-ifdown-during-PCI-error-recovery.patch
 	patches.drivers/tg3-0108-tg3-fix-ring-init-when-there-are-more-TX-than-RX-cha.patch
 
+	patches.drivers/tg3-net-tg3-Release-IRQs-on-permanent-error.patch
+
         # cnic SP4 updates (bsc#909368 FATE#317537)
 	patches.drivers/cnic-0001-net-broadcom-remove-__dev-attributes.patch
 	patches.drivers/cnic-0002-bnx2x-bnx2fc-Use-per-port-max-exchange-resources.patch
