ch: fixup refcounting imbalance for SCSI devices (bsc#925443).

--- a/series.conf
+++ b/series.conf
@@ -6520,6 +6520,7 @@
 	patches.drivers/mpt3sas-add-new-driver-supporting-12GB-SAS.patch
 	patches.fixes/sg-fix-blk_get_queue-usage
 	patches.fixes/ch-remove-ch_mutex.patch
+	patches.fixes/ch-fixup-refcounting-imbalance-for-SCSI-devices.patch
 
 	# NVMe backport (FATE#313627)
 	patches.drivers/nvme-0001-New-driver.patch
