ch: remove 'ch_mutex' (bnc#925443).

--- a/series.conf
+++ b/series.conf
@@ -6519,6 +6519,7 @@
 	patches.drivers/scsi_transport_sas-add-12GB-definitions-for-mpt.patch
 	patches.drivers/mpt3sas-add-new-driver-supporting-12GB-SAS.patch
 	patches.fixes/sg-fix-blk_get_queue-usage
+	patches.fixes/ch-remove-ch_mutex.patch
 
 	# NVMe backport (FATE#313627)
 	patches.drivers/nvme-0001-New-driver.patch
