xfs: xfs_alloc_fix_minleft can underflow near ENOSPC (bnc#913080, bnc#912741).

--- a/series.conf
+++ b/series.conf
@@ -3902,6 +3902,7 @@
 	patches.fixes/0006-xfs-introduce-xfs_bmapi_read.patch
 
 	patches.fixes/xfs-prevent-deadlock-trying-to-cover-an-active-log.patch
+	patches.fixes/xfs-xfs_alloc_fix_minleft-can-underflow-near-ENOSPC.patch
 
 	########################################################
 	# ceph backport from 3.5-rc1
