block: Fix dev_t minor allocation lifetime (bsc#928040).

--- a/series.conf
+++ b/series.conf
@@ -2082,6 +2082,7 @@
 	patches.fixes/block-fix-race-between-rq-completion-and-timeout.patch
 	patches.fixes/block-Fix-computation-of-merged-request-priority.patch
 	patches.fixes/block-serialize-round-stats.diff
+	patches.fixes/block-Fix-dev_t-minor-allocation-lifetime.patch
 
 	########################################################
 	# Networking, IPv6
