genhd: fix leftover might_sleep() in blk_free_devt() (bsc#928040).

--- a/series.conf
+++ b/series.conf
@@ -2083,6 +2083,7 @@
 	patches.fixes/block-Fix-computation-of-merged-request-priority.patch
 	patches.fixes/block-serialize-round-stats.diff
 	patches.fixes/block-Fix-dev_t-minor-allocation-lifetime.patch
+	patches.fixes/genhd-fix-leftover-might_sleep-in-blk_free_devt.patch
 
 	########################################################
 	# Networking, IPv6
