bnx2x: Fix kdump when iommu=on (bug#921769).

--- a/series.conf
+++ b/series.conf
@@ -12694,8 +12694,6 @@
 	patches.fixes/ib-ipoib-add-missing-locking-when-cm-object-is-delet.patch
 	patches.fixes/qlge-0001-qlge-fix-an-vs-bug.patch
 	patches.fixes/net-relax-rcvbuf-limits.patch
-
-	# bsc#914742, CVE-2014-8159
 	patches.fixes/ib-uverbs-prevent-integer-overflow-in-ib_umem_get-address-arithmetic.patch
 
 	########################################################
@@ -16978,6 +16976,7 @@
 	patches.drivers/0009-PATCH-SCSI-bnx2i-Updated-version-to-2.7.6.2.patch
 	patches.drivers/bnx2x-Adapter-not-recovering-from-EEH-error-injection
 	patches.drivers/bnx2x-Fix-kernel-crash-and-data-miscompare-after-EEH-recovery
+	patches.drivers/bnx2x-Fix-kdump-when-iommu-on.patch
 
 	# bnc#794648
 	patches.arch/0001-x86-cacheinfo-Determine-number-of-cache-leafs-using-.patch
