Enable the EXTENT_SAME ioctl (FATE#306586)
- Refresh
  patches.suse/btrfs-1418-Introduce-extent_read_full_page_nolock.patch.
- Refresh
  patches.suse/btrfs-8014-add-new-ioctl-to-determine-size-of-compressed-.patch.
- Refresh
  patches.suse/btrfs-8283-replace-error-code-from-btrfs_drop_extents.patch.

--- a/series.conf
+++ b/series.conf
@@ -1,4 +1,4 @@
-# Kernel patches configuration file
+# Kerne configuration file
 # vim: set ts=8 sw=8 noet:
 #
 # There are three kinds of rules (see guards.1 for details):
@@ -3894,8 +3894,8 @@
 	patches.suse/btrfs-1415-fix-possible-memory-leak-in-find_parent_nodes.patch
 	patches.suse/btrfs-1416-abtract-out-range-locking-in-clone-ioctl.patch
 	patches.suse/btrfs-1417-btrfs_ioctl_clone-Move-clone-code-into-it-s-own-func.patch
-+dsterba patches.suse/btrfs-1418-Introduce-extent_read_full_page_nolock.patch
-+dsterba patches.suse/btrfs-1419-offline-dedupe.patch
+	patches.suse/btrfs-1418-Introduce-extent_read_full_page_nolock.patch
+	patches.suse/btrfs-1419-offline-dedupe.patch
 	patches.suse/btrfs-1420-don-t-allow-a-subvol-to-be-deleted-if-it-is-th.patch
 	patches.suse/btrfs-1421-fix-the-error-handling-wrt-orphan-items.patch
 	patches.suse/btrfs-1422-fix-oops-when-writing-dirty-qgroups-to-disk.patch
