deal with deadlock in d_walk fix (bnc#929148, bnc#929283).

--- a/series.conf
+++ b/series.conf
@@ -1667,6 +1667,7 @@
 	patches.fixes/move-d_rcu-from-overlapping-d_child-to-overlapping-d.patch
 	patches.kabi/kabi-fix-for-move-d_rcu.patch
 	patches.fixes/deal-with-deadlock-in-d_walk.patch
+	patches.fixes/deal-with-deadlock-in-d_walk-fix.patch
 
 	########################################################
 	# IPC patches
