x86/apic/uv: Update the APIC UV OEM check (bsc#929145).

--- a/series.conf
+++ b/series.conf
@@ -17204,6 +17204,9 @@
 	# This depends on SECCOMP MODE 2 patches (current->no_new_privs)
 	patches.fixes/fs-take-i_mutex-during-prepare_binprm-for-set-ug-id.patch
 
+	# bsc#929145 - UV: bug in setting UV APIC handler
+	patches.fixes/update-uv-apic-oem-check
+
 	########################################################
 	# You'd better have a good reason for adding a patch
 	# below here.
