--- a/series.conf
+++ b/series.conf
@@ -17206,6 +17206,7 @@
 
 	# bsc#929145 - UV: bug in setting UV APIC handler
 	patches.fixes/update-uv-apic-oem-check
+	patches.fixes/update-uv-apic-driver-check
 
 	########################################################
 	# You'd better have a good reason for adding a patch
