x86/apic/uv: Update the UV APIC HUB check (bsc#929145).

--- a/series.conf
+++ b/series.conf
@@ -17207,6 +17207,7 @@
 	# bsc#929145 - UV: bug in setting UV APIC handler
 	patches.fixes/update-uv-apic-oem-check
 	patches.fixes/update-uv-apic-driver-check
+	patches.fixes/update-uv-apic-hub-check
 
 	########################################################
 	# You'd better have a good reason for adding a patch
