mm, oom: fix and cleanup oom score calculations (bnc#930171).

--- a/series.conf
+++ b/series.conf
@@ -1262,6 +1262,7 @@
 	patches.fixes/mm-do-not-walk-all-of-system-ram-during-show_mem.patch
 	patches.fixes/mm-oom-normalize-oom-scores-to-oom_score_adj-scale-o.patch
 	patches.fixes/mm-oom-fix-badness-score-underflow.patch
+	patches.fixes/mm-oom-fix-and-cleanup-oom-score-calculations.patch
 
 	# CVE-2012-5517, bnc#789235
 
