--- a/series.conf
+++ b/series.conf
@@ -1212,6 +1212,8 @@
 	patches.arch/s390-sles11sp3-z13base-16-sske-mbc.patch
 	patches.arch/s390-sles11sp3-z13base-17-stack-rnd-compat-z13.patch
 
+	patches.arch/s390-sles11sp3-28-01-af_iucv-fix-sendmsg-errno.patch
+
 	########################################################
 	# VM/FS patches
 	########################################################
