dasd: Fix unresumed device after suspend/resume (bnc#927338, LTC#123892).

--- a/series.conf
+++ b/series.conf
@@ -1213,6 +1213,7 @@
 	patches.arch/s390-sles11sp3-z13base-17-stack-rnd-compat-z13.patch
 
 	patches.arch/s390-sles11sp3-28-01-af_iucv-fix-sendmsg-errno.patch
+	patches.arch/s390-sles11sp3-28-02-dasd-fix-unresumed-device-after-suspend-resume.patch
 
 	########################################################
 	# VM/FS patches
