dasd: Fix device having no paths after suspend/resume (bnc#927338, LTC#123896).

--- a/series.conf
+++ b/series.conf
@@ -1214,6 +1214,7 @@
 
 	patches.arch/s390-sles11sp3-28-01-af_iucv-fix-sendmsg-errno.patch
 	patches.arch/s390-sles11sp3-28-02-dasd-fix-unresumed-device-after-suspend-resume.patch
+	patches.arch/s390-sles11sp3-28-03-dasd-fix-no-paths-after-suspend-resume.patch
 
 	########################################################
 	# VM/FS patches
