- x86/reboot: Fix a warning message triggered by stop_other_cpus()   (bnc#930284). - Refresh patches.suse/kdb-v4.4-3.1-x86-1.

--- a/series.conf
+++ b/series.conf
@@ -510,6 +510,8 @@
 
 	# bsc#926240, CVE-2015-2830
 	patches.arch/x86-asm-entry-64-remove-a-bogus-ret_from_fork-optimization.patch
+	# bnc#930284
+	patches.fixes/x86-reboot-Fix-a-warning-message-triggered-by-stop_o.patch
 
 	########################################################
 	# x86 MCE/MCA (Machine Check Error/Architecture) extensions
