--- a/series.conf
+++ b/series.conf
@@ -5399,6 +5399,8 @@
 	patches.drivers/megaraid_sas_fix_kdump.patch
 	patches.drivers/megaraid_sas-Disable-controller-reset-for-ppc.patch
 	patches.drivers/megaraid_sas-Disable-fastpath-writes-for-non-RAID0.patch
+	patches.drivers/megaraid_sas-Update-threshold-based-reply-post-host-.patch
+
 	patches.fixes/scsi-ses-crash-on-lun0
 	patches.suse/scsi-error-test-unit-ready-timeout
 	patches.fixes/scsi-scan-blist-update
