mm/hugetlb: check for pte NULL pointer in __page_check_address() (bnc#929143).

--- a/series.conf
+++ b/series.conf
@@ -1706,6 +1706,9 @@
 	patches.suse/mm-hugetlb-use-vma_resv_map-map-types.patch
 	patches.suse/mm-hugetlb-improve-page-fault-scalability.patch
 
+	# bnc929143
+	patches.fixes/mm-hugetlb-check-for-pte-NULL-pointer-in-__page_chec.patch
+
 	# bnc#876590
 	patches.fixes/Fix-memory-allocator-deadlock.patch
 
