--- a/series.conf
+++ b/series.conf
@@ -14663,6 +14663,7 @@
 	patches.fixes/tty-Fix-memory-leak-in-virtual-console-when-enable-u.patch
 	patches.fixes/vt-push-the-tty_lock-down-into-the-map-handling.patch
 	patches.kabi/kabi-protect-console-include-in-consolemap.patch
+	patches.fixes/tty-hold-lock-across-tty-buffer-finding-and-buffer-f.patch
 
 	########################################################
 	# Other driver fixes
