xfs: support a tag-based inode_ag_iterator (bnc#930788).

--- a/series.conf
+++ b/series.conf
@@ -3993,6 +3993,7 @@
 	patches.fixes/xfs-xfs_alloc_fix_minleft-can-underflow-near-ENOSPC.patch
 
 	patches.fixes/xfs-add-EOFBLOCKS-inode-tagging-untagging.patch
+	patches.fixes/xfs-support-a-tag-based-inode_ag_iterator.patch
 
 	########################################################
 	# ceph backport from 3.5-rc1
