xfs: make xfs_free_eofblocks() non-static, return EAGAIN on trylock failure (bnc#930788).

--- a/series.conf
+++ b/series.conf
@@ -3995,6 +3995,7 @@
 	patches.fixes/xfs-add-EOFBLOCKS-inode-tagging-untagging.patch
 	patches.fixes/xfs-support-a-tag-based-inode_ag_iterator.patch
 	patches.fixes/xfs-create-helper-to-check-whether-to-free-eofblocks.patch
+	patches.fixes/xfs-make-xfs_free_eofblocks-non-static-return-EAGAIN.patch
 
 	########################################################
 	# ceph backport from 3.5-rc1
