--- a/series.conf
+++ b/series.conf
@@ -3999,6 +3999,7 @@
 	patches.fixes/xfs-create-function-to-scan-and-clear-EOFBLOCKS-inod.patch
 	patches.fixes/xfs-add-XFS_IOC_FREE_EOFBLOCKS-ioctl.patch
 	patches.fixes/xfs-add-inode-id-filtering-to-eofblocks-scan.patch
+	patches.fixes/xfs-support-multiple-inode-id-filtering-in-eofblocks.patch
 
 	########################################################
 	# ceph backport from 3.5-rc1
