xfs: add minimum file size filtering to eofblocks scan (bnc#930788).

--- a/series.conf
+++ b/series.conf
@@ -4000,6 +4000,7 @@
 	patches.fixes/xfs-add-XFS_IOC_FREE_EOFBLOCKS-ioctl.patch
 	patches.fixes/xfs-add-inode-id-filtering-to-eofblocks-scan.patch
 	patches.fixes/xfs-support-multiple-inode-id-filtering-in-eofblocks.patch
+	patches.fixes/xfs-add-minimum-file-size-filtering-to-eofblocks-sca.patch
 
 	########################################################
 	# ceph backport from 3.5-rc1
