xfs: create helper to check whether to free eofblocks on inode (bnc#930788).

--- a/series.conf
+++ b/series.conf
@@ -3994,6 +3994,7 @@
 
 	patches.fixes/xfs-add-EOFBLOCKS-inode-tagging-untagging.patch
 	patches.fixes/xfs-support-a-tag-based-inode_ag_iterator.patch
+	patches.fixes/xfs-create-helper-to-check-whether-to-free-eofblocks.patch
 
 	########################################################
 	# ceph backport from 3.5-rc1
