xfs: add background scanning to clear eofblocks inodes (bnc#930788).

--- a/series.conf
+++ b/series.conf
@@ -4001,6 +4001,7 @@
 	patches.fixes/xfs-add-inode-id-filtering-to-eofblocks-scan.patch
 	patches.fixes/xfs-support-multiple-inode-id-filtering-in-eofblocks.patch
 	patches.fixes/xfs-add-minimum-file-size-filtering-to-eofblocks-sca.patch
+	patches.fixes/xfs-add-background-scanning-to-clear-eofblocks-inode.patch
 
 	########################################################
 	# ceph backport from 3.5-rc1
