xfs: create function to scan and clear EOFBLOCKS inodes (bnc#930788).

--- a/series.conf
+++ b/series.conf
@@ -3996,6 +3996,7 @@
 	patches.fixes/xfs-support-a-tag-based-inode_ag_iterator.patch
 	patches.fixes/xfs-create-helper-to-check-whether-to-free-eofblocks.patch
 	patches.fixes/xfs-make-xfs_free_eofblocks-non-static-return-EAGAIN.patch
+	patches.fixes/xfs-create-function-to-scan-and-clear-EOFBLOCKS-inod.patch
 
 	########################################################
 	# ceph backport from 3.5-rc1
