xfs: add XFS_IOC_FREE_EOFBLOCKS ioctl (bnc#930788).

--- a/series.conf
+++ b/series.conf
@@ -3997,6 +3997,7 @@
 	patches.fixes/xfs-create-helper-to-check-whether-to-free-eofblocks.patch
 	patches.fixes/xfs-make-xfs_free_eofblocks-non-static-return-EAGAIN.patch
 	patches.fixes/xfs-create-function-to-scan-and-clear-EOFBLOCKS-inod.patch
+	patches.fixes/xfs-add-XFS_IOC_FREE_EOFBLOCKS-ioctl.patch
 
 	########################################################
 	# ceph backport from 3.5-rc1
