xfs: add inode id filtering to eofblocks scan (bnc#930788).

--- a/series.conf
+++ b/series.conf
@@ -3998,6 +3998,7 @@
 	patches.fixes/xfs-make-xfs_free_eofblocks-non-static-return-EAGAIN.patch
 	patches.fixes/xfs-create-function-to-scan-and-clear-EOFBLOCKS-inod.patch
 	patches.fixes/xfs-add-XFS_IOC_FREE_EOFBLOCKS-ioctl.patch
+	patches.fixes/xfs-add-inode-id-filtering-to-eofblocks-scan.patch
 
 	########################################################
 	# ceph backport from 3.5-rc1
