xfs: add EOFBLOCKS inode tagging/untagging (bnc#930788).

--- a/series.conf
+++ b/series.conf
@@ -3992,6 +3992,8 @@
 	patches.fixes/xfs-prevent-deadlock-trying-to-cover-an-active-log.patch
 	patches.fixes/xfs-xfs_alloc_fix_minleft-can-underflow-near-ENOSPC.patch
 
+	patches.fixes/xfs-add-EOFBLOCKS-inode-tagging-untagging.patch
+
 	########################################################
 	# ceph backport from 3.5-rc1
 	########################################################
