--- a/series.conf
+++ b/series.conf
@@ -3992,6 +3992,7 @@
 	patches.fixes/xfs-prevent-deadlock-trying-to-cover-an-active-log.patch
 	patches.fixes/xfs-xfs_alloc_fix_minleft-can-underflow-near-ENOSPC.patch
 
+	patches.fixes/lib-string.c-introduce-memchr_inv.patch
 	patches.fixes/xfs-add-EOFBLOCKS-inode-tagging-untagging.patch
 	patches.fixes/xfs-support-a-tag-based-inode_ag_iterator.patch
 	patches.fixes/xfs-create-helper-to-check-whether-to-free-eofblocks.patch
