--- a/series.conf
+++ b/series.conf
@@ -5245,6 +5245,7 @@
 	patches.fixes/nfs-prime-decache-requires-fh.patch
 	patches.fixes/0001-don-t-do-blind-d_drop-in-nfs_prime_dcache.patch
 	patches.fixes/0001-NFSv4-Fix-another-reboot-recovery-race.patch
+	patches.fixes/0001-NFS-Fix-a-regression-in-nfs_file_llseek.patch
 
 	# bsc#918333, CVE-2014-9683
 	patches.fixes/ecryptfs-remove-buggy-and-unnecessary-write-in-file-name-decode-routine.patch
