sched: Fix potential near-infinite distribute_cfs_runtime() loop (bnc#930786)

--- a/series.conf
+++ b/series.conf
@@ -446,6 +446,9 @@
 	patches.fixes/0002-x86-xsave-remove-thread_has_fpu-bug-check-in-__sanit.patch
 	patches.fixes/fork-report-pid-reservation-failure-properly.patch
 
+	# bnc#930786
+	patches.fixes/sched-Fix-potential-near-infinite-distribute_cfs_runtime-loop.patch
+
 	########################################################
 	# futex
 	########################################################
