megaraid_sas : Modify return value of megasas_issue_blocked_cmd() (bsc#930925).

--- a/series.conf
+++ b/series.conf
@@ -5748,6 +5748,7 @@
 	patches.drivers/megaraid_sas-Disable-controller-reset-for-ppc.patch
 	patches.drivers/megaraid_sas-Disable-fastpath-writes-for-non-RAID0.patch
 	patches.drivers/megaraid_sas-Add-back-driver-information.patch
+	patches.drivers/megaraid_sas-Modify-return-value-of-megasas_issue_bl.patch
 
 	patches.fixes/scsi-ses-crash-on-lun0
 	patches.suse/scsi-error-test-unit-ready-timeout
