x86-64: Don't apply destructive erratum workaround on unaffected CPUs (bsc#929076).

--- a/series.conf
+++ b/series.conf
@@ -22711,6 +22711,9 @@
 	patches.fixes/iommu-amd-optimize-amd_iommu_iova_to_phys-for-new-fetch_pte-interface
 	patches.fixes/iommu-amd-correctly-encode-huge-pages-in-iommu-page-tables
 
+	# bsc#929076 - crash during kernel initialization, BUG: unable to handle kernel paging request at ffffffffbf3c88dd
+	patches.fixes/x86-64-don-t-apply-destructive-erratum-workaround-on-unaffected-cpus
+
 	########################################################
 	# You'd better have a good reason for adding a patch
 	# below here.
