--- a/series.conf
+++ b/series.conf
@@ -1586,6 +1586,11 @@
 	patches.fixes/mm-vmscan-do-not-continue-if-aborted-for-compaction.patch
 	patches.fixes/don-t-trigger-congestion-wait-on-dirty-but-not-write.patch
 	patches.fixes/mm-vmscan-count-only-dirty-pages-as-congested.patch
+
+	# bnc931015
+	patches.fixes/mm-exclude-reserved-pages-from-dirtyable-memory.patch
+	patches.fixes/mm-fix-calculation-of-dirtyable-memory.patch
+	patches.fixes/mm-page-writeback.c-fix-dirty_balance_reserve-subtra.patch
 	
 	# memcg enhacements
 	patches.suse/mm-memcg-print-statistics-directly-to-seq_file.patch
