--- a/series.conf
+++ b/series.conf
@@ -17254,6 +17254,7 @@
 	patches.fixes/iommu-amd-return-the-pte-page-size-in-fetch_pte
 	patches.fixes/iommu-amd-optimize-iommu_unmap_page-for-new-fetch_pte-interface
 	patches.fixes/iommu-amd-optimize-alloc_new_range-for-new-fetch_pte-interface
+	patches.fixes/iommu-amd-optimize-amd_iommu_iova_to_phys-for-new-fetch_pte-interface
 
 	########################################################
 	# You'd better have a good reason for adding a patch
