iommu/amd: Optimize iommu_unmap_page for new fetch_pte interface (bsc#931014).

--- a/series.conf
+++ b/series.conf
@@ -17252,6 +17252,7 @@
 
 	# bsc#931014 - Backport recent AMD IOMMU page-table fixes to SLE12 and SLE11-SP3
 	patches.fixes/iommu-amd-return-the-pte-page-size-in-fetch_pte
+	patches.fixes/iommu-amd-optimize-iommu_unmap_page-for-new-fetch_pte-interface
 
 	########################################################
 	# You'd better have a good reason for adding a patch
