iommu/amd: Correctly encode huge pages in iommu page tables (bsc#931014).

--- a/series.conf
+++ b/series.conf
@@ -17255,6 +17255,7 @@
 	patches.fixes/iommu-amd-optimize-iommu_unmap_page-for-new-fetch_pte-interface
 	patches.fixes/iommu-amd-optimize-alloc_new_range-for-new-fetch_pte-interface
 	patches.fixes/iommu-amd-optimize-amd_iommu_iova_to_phys-for-new-fetch_pte-interface
+	patches.fixes/iommu-amd-correctly-encode-huge-pages-in-iommu-page-tables
 
 	########################################################
 	# You'd better have a good reason for adding a patch
