iommu/amd: Return the pte page-size in fetch_pte (bsc#931014).

--- a/series.conf
+++ b/series.conf
@@ -17250,6 +17250,9 @@
 	patches.fixes/update-uv-apic-driver-check
 	patches.fixes/update-uv-apic-hub-check
 
+	# bsc#931014 - Backport recent AMD IOMMU page-table fixes to SLE12 and SLE11-SP3
+	patches.fixes/iommu-amd-return-the-pte-page-size-in-fetch_pte
+
 	########################################################
 	# You'd better have a good reason for adding a patch
 	# below here.
