storvsc: Set the SRB flags correctly when no data transfer is needed (bnc#931130).

--- a/series.conf
+++ b/series.conf
@@ -21933,6 +21933,8 @@
 	patches.suse/msft-hv-0806-scsi-storvsc-Don-t-assume-that-the-scatterlist-is-no.patch
 	patches.suse/msft-hv-0807-scsi-storvsc-Set-the-tablesize-based-on-the-informat.patch
 
+	patches.suse/suse-hv-storvsc-Set-the-SRB-flags-correctly-when-no-data-tra.patch
+
 	patches.suse/suse-hv-hv_kvp-sles11sp2-negotiate-serveral-versions.patch
 	patches.suse/suse-hv-rndis_filter-defines.patch
 	patches.suse/suse-hv-netvsc-net-flow_keys.patch
