powerpc/mm: Fix mmap errno when MAP_FIXED is set and mapping exceeds the allowed address space (bsc#930669).

--- a/series.conf
+++ b/series.conf
@@ -17259,6 +17259,9 @@
 	patches.fixes/iommu-amd-optimize-amd_iommu_iova_to_phys-for-new-fetch_pte-interface
 	patches.fixes/iommu-amd-correctly-encode-huge-pages-in-iommu-page-tables
 
+	# bsc#930669 - qa_test_ltp:syscalls:mmap15 failed only on ppc64 and ia64
+	patches.fixes/powerpc-mm-fix-mmap-errno-when-map_fixed-is-set-and-mapping-exceeds-the-allowed-address-space
+
 	########################################################
 	# You'd better have a good reason for adding a patch
 	# below here.
