Btrfs: fix race that makes btrfs_lookup_extent_info miss skinny extent items.

--- a/series.conf
+++ b/series.conf
@@ -4042,6 +4042,7 @@
 	patches.suse/btrfs-8304-fix-race-in-WAIT_SYNC-ioctl.patch
 	patches.suse/btrfs-8305-fix-kfree-on-list_head-in-btrfs_lookup_csums_r.patch
 	patches.suse/btrfs-8334-fix-invalid-leaf-slot-access-in-btrfs_lookup_e.patch
+	patches.suse/btrfs-8335-fix-race-that-makes-btrfs_lookup_extent_info-m.patch
 	# 3.19
 	patches.suse/btrfs-8306-make-xattr-replace-operations-atomic.patch
 	patches.suse/btrfs-8307-make-sure-we-wait-on-logged-extents-when-fsycn.patch
