Btrfs: make backref walking code handle skinny metadata.

--- a/series.conf
+++ b/series.conf
@@ -3873,6 +3873,7 @@
 	patches.suse/btrfs-1316-unlock-extent-range-on-enospc-in-compressed-su.patch
 	patches.suse/btrfs-1317-check-if-we-can-nocow-if-we-don-t-have-data-sp.patch
 	patches.suse/btrfs-1337-fix-crash-regarding-to-ulist_add_merge.patch
+	patches.suse/btrfs-1342-make-backref-walking-code-handle-skinny-metada.patch
 	patches.suse/btrfs-1318-hold-the-tree-mod-lock-in-__tree_mod_log_rewin.patch
 	patches.suse/btrfs-1319-only-do-the-tree_mod_log_free_eb-if-this-is-ou.patch
 	patches.suse/btrfs-1320-update-drop-progress-before-stopping-snapshot-.patch
