--- a/series.conf
+++ b/series.conf
@@ -3940,6 +3940,7 @@
 	patches.suse/btrfs-8221-release-path-before-starting-transaction-in-ca.patch
 	patches.suse/btrfs-8169-Simplify-the-logic-in-alloc_extent_buffer-for-.patch
 	patches.suse/btrfs-8251-fix-a-crash-when-running-balance-and-defrag-co.patch
+	patches.suse/btrfs-8337-optimize-btrfs_lookup_extent_info.patch
 	# 3.14
 	patches.suse/btrfs-8170-deal-with-io_tree-mapping-being-NULL.patch
 	patches.suse/btrfs-8171-use-a-bit-to-track-if-we-re-in-the-radix-tree.patch
