Btrfs: fix btrfs_print_leaf for skinny metadata.

--- a/series.conf
+++ b/series.conf
@@ -4020,6 +4020,7 @@
 	patches.suse/btrfs-8252-fix-corruption-after-write-fsync-failure-fsync.patch
 	patches.suse/btrfs-8253-unset-DCACHE_DISCONNECTED-when-mounting-defaul.patch
 	patches.suse/btrfs-8332-fix-scrub_print_warning-to-handle-skinny-metad.patch
+	patches.suse/btrfs-8333-fix-btrfs_print_leaf-for-skinny-metadata.patch
 	# 3.17
 	patches.suse/btrfs-8275-read-lock-extent-buffer-while-walking-backrefs.patch
 	patches.suse/btrfs-8254-fix-csum-tree-corruption-duplicate-and-outdate.patch
