--- a/series.conf
+++ b/series.conf
@@ -4041,6 +4041,7 @@
 	patches.suse/btrfs-8303-fix-crash-of-btrfs_release_extent_buffer_page.patch
 	patches.suse/btrfs-8304-fix-race-in-WAIT_SYNC-ioctl.patch
 	patches.suse/btrfs-8305-fix-kfree-on-list_head-in-btrfs_lookup_csums_r.patch
+	patches.suse/btrfs-8334-fix-invalid-leaf-slot-access-in-btrfs_lookup_e.patch
 	# 3.19
 	patches.suse/btrfs-8306-make-xattr-replace-operations-atomic.patch
 	patches.suse/btrfs-8307-make-sure-we-wait-on-logged-extents-when-fsycn.patch
