Btrfs: correctly get tree level in tree_backref_for_extent.

--- a/series.conf
+++ b/series.conf
@@ -4053,6 +4053,7 @@
 	patches.suse/btrfs-8314-add-more-superblock-checks.patch
 	patches.suse/btrfs-8315-use-macro-accessors-in-superblock-validation-c.patch
 	patches.suse/btrfs-8316-fix-typos-in-btrfs_check_super_valid.patch
+	patches.suse/btrfs-8336-correctly-get-tree-level-in-tree_backref_for_e.patch
 	# 4.0
 	patches.suse/btrfs-8317-fix-setup_leaf_for_split-to-avoid-leaf-corrupt.patch
 	patches.suse/btrfs-8319-more-superblock-checks-lower-bounds-on-devices.patch
