--- a/series.conf
+++ b/series.conf
@@ -3973,6 +3973,7 @@
 	patches.suse/btrfs-8205-fix-max_inline-mount-option.patch
 	patches.suse/btrfs-compat-export-btrfs_prev_leaf.patch
 	patches.suse/btrfs-8327-fix-extent_from_logical-to-deal-with-skinny-me.patch
+	patches.suse/btrfs-8328-fix-qgroup-rescan-to-work-with-skinny-metadata.patch
 	# 3.15
 	patches.suse/btrfs-8223-Return-EXDEV-for-cross-file-system-snapshot.patch
 	patches.suse/btrfs-8258-always-choose-work-from-prio_head-first.patch
