Btrfs: check to see if we have an inline item properly.

--- a/series.conf
+++ b/series.conf
@@ -3898,6 +3898,7 @@
 	patches.suse/btrfs-1406-add-sanity-checks-regarding-to-parsing-mount-o.patch
 	patches.suse/btrfs-1407-use-u64-for-subvolid-when-parsing-mount-option.patch
 	patches.suse/btrfs-1408-add-missing-mounting-options-in-btrfs_show_opt.patch
+	patches.suse/btrfs-1443-check-to-see-if-we-have-an-inline-item-properl.patch
 	patches.suse/btrfs-1409-don-t-bug_on-when-we-fail-when-cleaning-up-tra.patch
 	patches.suse/btrfs-1410-add-missing-error-handling-to-read_tree_block.patch
 	patches.suse/btrfs-1411-handle-errors-when-doing-slow-caching.patch
