Btrfs: use correct key when repeating search for extent item.

--- a/series.conf
+++ b/series.conf
@@ -3996,6 +3996,7 @@
 	patches.suse/btrfs-8231-correctly-set-profile-flags-on-seqlock-retry.patch
 	patches.suse/btrfs-8233-make-device-scan-less-noisy.patch
 	patches.suse/btrfs-8260-filter-invalid-arg-for-btrfs-resize.patch
+	patches.suse/btrfs-8331-use-correct-key-when-repeating-search-for-exte.patch
 	# 3.16
 	patches.suse/btrfs-8234-more-efficient-io-tree-navigation-on-wait_exte.patch
 	patches.suse/btrfs-8268-fix-hang-on-error-such-as-ENOSPC-when-writing-.patch
