Btrfs: fix scrub_print_warning to handle skinny metadata extents.

--- a/series.conf
+++ b/series.conf
@@ -4019,6 +4019,7 @@
 	patches.suse/btrfs-8267-fix-race-between-balance-recovery-and-root-del.patch
 	patches.suse/btrfs-8252-fix-corruption-after-write-fsync-failure-fsync.patch
 	patches.suse/btrfs-8253-unset-DCACHE_DISCONNECTED-when-mounting-defaul.patch
+	patches.suse/btrfs-8332-fix-scrub_print_warning-to-handle-skinny-metad.patch
 	# 3.17
 	patches.suse/btrfs-8275-read-lock-extent-buffer-while-walking-backrefs.patch
 	patches.suse/btrfs-8254-fix-csum-tree-corruption-duplicate-and-outdate.patch
