btrfs: Export btrfs_prev_leaf.

--- a/series.conf
+++ b/series.conf
@@ -3971,6 +3971,7 @@
 	patches.suse/btrfs-8201-don-t-use-ram_bytes-for-uncompressed-inline-it.patch
 	patches.suse/btrfs-8202-setup-inode-location-during-btrfs_init_inode_l.patch
 	patches.suse/btrfs-8205-fix-max_inline-mount-option.patch
+	patches.suse/btrfs-compat-export-btrfs_prev_leaf.patch
 	# 3.15
 	patches.suse/btrfs-8223-Return-EXDEV-for-cross-file-system-snapshot.patch
 	patches.suse/btrfs-8258-always-choose-work-from-prio_head-first.patch
