Btrfs: fix not being able to find skinny extents during relocate.

--- a/series.conf
+++ b/series.conf
@@ -3869,6 +3869,7 @@
 	patches.suse/btrfs-1313-fix-broken-nocow-after-balance.patch
 	patches.suse/btrfs-1314-wake-up-delayed-ref-flushing-waiters-on-abort.patch
 	patches.suse/btrfs-1315-fix-transaction-throttling-for-delayed-refs.patch
+	patches.suse/btrfs-1341-fix-not-being-able-to-find-skinny-extents-duri.patch
 	patches.suse/btrfs-1316-unlock-extent-range-on-enospc-in-compressed-su.patch
 	patches.suse/btrfs-1317-check-if-we-can-nocow-if-we-don-t-have-data-sp.patch
 	patches.suse/btrfs-1337-fix-crash-regarding-to-ulist_add_merge.patch
@@ -3937,6 +3938,7 @@
 	patches.suse/btrfs-8221-release-path-before-starting-transaction-in-ca.patch
 	patches.suse/btrfs-8169-Simplify-the-logic-in-alloc_extent_buffer-for-.patch
 	patches.suse/btrfs-8251-fix-a-crash-when-running-balance-and-defrag-co.patch
+	# 3.14
 	patches.suse/btrfs-8170-deal-with-io_tree-mapping-being-NULL.patch
 	patches.suse/btrfs-8171-use-a-bit-to-track-if-we-re-in-the-radix-tree.patch
 	patches.suse/btrfs-8172-move-the-extent-buffer-radix-tree-into-the-fs_.patch
@@ -3965,6 +3967,7 @@
 	patches.suse/btrfs-8201-don-t-use-ram_bytes-for-uncompressed-inline-it.patch
 	patches.suse/btrfs-8202-setup-inode-location-during-btrfs_init_inode_l.patch
 	patches.suse/btrfs-8205-fix-max_inline-mount-option.patch
+	# 3.15
 	patches.suse/btrfs-8223-Return-EXDEV-for-cross-file-system-snapshot.patch
 	patches.suse/btrfs-8258-always-choose-work-from-prio_head-first.patch
 	patches.suse/btrfs-8224-avoid-warning-bomb-of-btrfs_invalidate_inodes.patch
@@ -3984,6 +3987,7 @@
 	patches.suse/btrfs-8231-correctly-set-profile-flags-on-seqlock-retry.patch
 	patches.suse/btrfs-8233-make-device-scan-less-noisy.patch
 	patches.suse/btrfs-8260-filter-invalid-arg-for-btrfs-resize.patch
+	# 3.16
 	patches.suse/btrfs-8234-more-efficient-io-tree-navigation-on-wait_exte.patch
 	patches.suse/btrfs-8268-fix-hang-on-error-such-as-ENOSPC-when-writing-.patch
 	patches.suse/btrfs-8236-retrieve-more-info-from-FS_INFO-ioctl.patch
@@ -4005,6 +4009,7 @@
 	patches.suse/btrfs-8267-fix-race-between-balance-recovery-and-root-del.patch
 	patches.suse/btrfs-8252-fix-corruption-after-write-fsync-failure-fsync.patch
 	patches.suse/btrfs-8253-unset-DCACHE_DISCONNECTED-when-mounting-defaul.patch
+	# 3.17
 	patches.suse/btrfs-8275-read-lock-extent-buffer-while-walking-backrefs.patch
 	patches.suse/btrfs-8254-fix-csum-tree-corruption-duplicate-and-outdate.patch
 	patches.suse/btrfs-8257-check-file-extent-type-before-anything-else.patch
@@ -4012,6 +4017,7 @@
 	patches.suse/btrfs-8264-handle-a-missing-extent-for-the-first-file-ext.patch
 	patches.suse/btrfs-8279-fix-wrong-extent-mapping-for-DirectIO.patch
 	patches.suse/btrfs-8274-Return-right-extent-when-fiemap-gives-unaligne.patch
+	# 3.18
 	patches.suse/btrfs-8277-Fix-wrong-device-size-when-we-are-resizing-the.patch
 	patches.suse/btrfs-8293-set-error-return-value-in-btrfs_get_blocks_dir.patch
 	patches.suse/btrfs-8294-fix-off-by-one-in-cow_file_range_inline.patch
@@ -4023,6 +4029,7 @@
 	patches.suse/btrfs-8303-fix-crash-of-btrfs_release_extent_buffer_page.patch
 	patches.suse/btrfs-8304-fix-race-in-WAIT_SYNC-ioctl.patch
 	patches.suse/btrfs-8305-fix-kfree-on-list_head-in-btrfs_lookup_csums_r.patch
+	# 3.19
 	patches.suse/btrfs-8306-make-xattr-replace-operations-atomic.patch
 	patches.suse/btrfs-8307-make-sure-we-wait-on-logged-extents-when-fsycn.patch
 	patches.suse/btrfs-8308-fix-fs-corruption-on-transaction-abort-if-devi.patch
@@ -4032,6 +4039,7 @@
 	patches.suse/btrfs-8314-add-more-superblock-checks.patch
 	patches.suse/btrfs-8315-use-macro-accessors-in-superblock-validation-c.patch
 	patches.suse/btrfs-8316-fix-typos-in-btrfs_check_super_valid.patch
+	# 4.0
 	patches.suse/btrfs-8317-fix-setup_leaf_for_split-to-avoid-leaf-corrupt.patch
 	patches.suse/btrfs-8319-more-superblock-checks-lower-bounds-on-devices.patch
 	patches.suse/btrfs-8320-add-checks-for-sys_chunk_array-sizes.patch
