Btrfs: fix inode eviction infinite loop after extent_same ioctl (bnc#930224 bnc#916521).

--- a/series.conf
+++ b/series.conf
@@ -4063,6 +4063,8 @@
 	patches.suse/btrfs-8323-fix-scheduler-warning-when-syncing-log.patch
 	patches.suse/btrfs-8324-abort-the-transaction-if-we-fail-to-update-the.patch
 	patches.suse/btrfs-8325-fix-lost-return-value-due-to-variable-shadowin.patch
+	# 4.1
+	patches.suse/btrfs-8338-fix-inode-eviction-infinite-loop-after-extent_.patch
 
 	# Non-upstreamed btrfs patches
 	patches.suse/btrfs-0006-fix-error-check-of-btrfs_lookup_dentry.patch
