Btrfs: btrfs_release_extent_buffer_page didn't free pages of dummy extent (bnc#930226 bnc#916521).

--- a/series.conf
+++ b/series.conf
@@ -4065,6 +4065,7 @@
 	patches.suse/btrfs-8325-fix-lost-return-value-due-to-variable-shadowin.patch
 	# 4.1
 	patches.suse/btrfs-8338-fix-inode-eviction-infinite-loop-after-extent_.patch
+	patches.suse/btrfs-8339-btrfs_release_extent_buffer_page-didn-t-free-p.patch
 
 	# Non-upstreamed btrfs patches
 	patches.suse/btrfs-0006-fix-error-check-of-btrfs_lookup_dentry.patch
