--- a/series.conf
+++ b/series.conf
@@ -19837,6 +19837,7 @@
 	patches.fixes/ipmi-fix-KCS-timeout-values.patch
 	patches.fixes/ipmi-fix-a-race-restarting-the-timer.patch
 	patches.fixes/ipmi-reset-the-KCS-timeout-when-starting-error-recovery.patch
+	patches.fixes/ipmi-Turn-off-all-activity-on-an-idle-ipmi-interface
 	patches.drivers/Add-MODULE_ALIAS-for-autoloading-ipmi-driver-on-ACPI.patch
 
 	patches.fixes/watchdog-iTCO_wdt-preserve-SMI-on-new-hardware.patch
