--- a/series.conf
+++ b/series.conf
@@ -21962,6 +21962,7 @@
 	patches.suse/msft-hv-0807-scsi-storvsc-Set-the-tablesize-based-on-the-informat.patch
 
 	patches.suse/suse-hv-storvsc-Set-the-SRB-flags-correctly-when-no-data-tra.patch
+	patches.suse/suse-hv-hv_daemon_defer.patch
 
 	patches.suse/suse-hv-rndis_filter-defines.patch
 	patches.suse/suse-hv-netvsc-net-flow_keys.patch
