- disable: 0002-rtc-restore-the-rtc-alarm-time-to-the-configured-ala.patch - resurrect: rtc-cmos-add-more-quirks-for-TGCS.patch   for the time being. Per request: (bnc#930145)

--- a/series.conf
+++ b/series.conf
@@ -17095,10 +17095,10 @@
 	patches.drivers/x86-iommu-dmar-remove-warning-for-hpet-scope-type.patch
 
 	# bnc#805740 Truman reboot quirk, updated with upstream version
-	patches.fixes/rtc-cmos-add-an-alarm-disable-quirk-upstream_version.patch
+-eich	patches.fixes/rtc-cmos-add-an-alarm-disable-quirk-upstream_version.patch
 	patches.fixes/drivers-rtc-interface.c-fix-infinite-loop-in-initial.patch
-#	patches.fixes/rtc-cmos-add-more-quirks-for-TGCS.patch
-	patches.fixes/0002-rtc-restore-the-rtc-alarm-time-to-the-configured-ala.patch
+-eich	patches.fixes/rtc-cmos-add-more-quirks-for-TGCS.patch
++eich	patches.fixes/0002-rtc-restore-the-rtc-alarm-time-to-the-configured-ala.patch
 
 	# bnc#833588: sporadic failure to mount root partition
 	patches.drivers/libata-set-proper-sk-when-ck_cond-is-set.patch
