- edd: support original Phoenix EDD 3.0 information   (bnc#762285,bsc#929974). - Delete   patches.fixes/edd-check-for-correct-device_path_info_length.patch.

--- a/series.conf
+++ b/series.conf
@@ -5623,7 +5623,7 @@
 	#
 	########################################################
 	patches.drivers/disable-catas_reset-by-default-to-avoid-problems-with-eeh.patch
-	patches.fixes/edd-check-for-correct-device_path_info_length.patch
+	patches.fixes/edd-support-original-Phoenix-EDD-3.0-information.patch
 
 +mmarek	patches.drivers/reenable-generic_serial
 
