x86, kvm: Remove incorrect redundant assembly constraint (bnc#931850).

--- a/series.conf
+++ b/series.conf
@@ -15954,6 +15954,8 @@
 	patches.arch/kvm-fix-excessive-pages-un-pinning-in-kvm_iommu_map-error-path.patch
 	# bsc#909078, CVE-2014-8134
 	patches.arch/x86-kvm-clear-paravirt_enabled-on-kvm-guests-for-espfix32-s-benefit.patch
+	# bnc#931850
+	patches.arch/x86-kvm-Remove-incorrect-redundant-assembly-constrai.patch
 
 	########################################################
 	# Staging tree patches
