lpfc: Fix race on command completion (bnc#906027,bnc#889221).

--- a/series.conf
+++ b/series.conf
@@ -5623,6 +5623,7 @@
 	patches.drivers/lpfc-8.3.7.10.6p-Update-lpfc-version-for-8.3.7.10.7p-driver-release.patch
 	patches.drivers/lpfc-Fixed-issue-of-task-management-commands-.patch
 	patches.drivers/lpfc-Fixed-SLI3-failing-FCP-write-on-che.patch
+	patches.drivers/lpfc-Fix-race-on-command-completion.patch
 
 	patches.drivers/qla2xxx-0001-fix-comment-typo-hammmer.patch
 	patches.drivers/qla2xxx-0002-Basic-infrastructure-for-dynamic-logging.patch
